# lab8

./: .gitignore  CMakeLists.txt  README.md  config.h  lab_visualisation.py  main.cpp
include/algorithms/: astar.h  astar_ps.h  thetastar.h
include/grid/: grid.h  node.h
include/scenarios/: maze.h  narrow_corridor.h  obstacles.h  open_space.h  test_scenarios.h
include/utils/: csv_writer.h  line_of_sight.h  metrics_calculator.h
python_visualization/: maze.py  narrow_corridors.py  obstacles.py  open_space.py
results/csv/: detailed_results_20251120_132544.csv  summary_table_20251120_132544.csv
src/algorithms/: astar.cpp  astar_ps.cpp  thetastar.cpp
src/grid/: grid.cpp
src/scenarios/: maze.cpp  narrow_corridor.cpp  obstacles.cpp  open_space.cpp  test_scenarios.cpp
src/utils/: csv_writer.cpp  line_of_sight.cpp  metrics_calculator.cpp
